--- a/src/minichallenge5/config/puzzlebot_nodes_params.yaml
+++ b/src/minichallenge5/config/puzzlebot_nodes_params.yaml
@@ -3,17 +3,59 @@ robot1:
     ros__parameters:
       localization_update_rate: 50.0
       initial_pose:
-        x: 1.0
-        y: 1.0
+        x: -3.0
+        y: 1.2
         theta: 0.0
+      kr: 0.15
+      kl: 0.15
 
   puzzlebot_controller:
     ros__parameters:
       controller_update_rate: 50.0
       distance_tolerance: 0.01
       angular_tolerance: 0.017
-      v_Kp: 0.5
-      alpha_Kp: 1.0
-      beta_Kp: -0.75
-      v_max: 1.0
+      angular_adjustment: 0.1745
+      following_walls_distance: 0.3
+      front_stop_distance: 0.3
+      lookahead_distance: 0.35
+      p2p_v_Kp: 0.8
+      p2p_w_Kp: 1.5
+      fw_w_Kp: 2.0
+      fw_e_Kp: 8.5
+      fw_linear_speed: 0.4
+      fw_outer_corner_angular_speed: 1.9
+      v_max: 0.4
       w_max: 3.14
+      side_open_angle: 0.5236
+      front_open_angle: 0.3
+
+robot2:
+  puzzlebot_localization:
+    ros__parameters:
+      localization_update_rate: 50.0
+      initial_pose:
+        x: 1.75
+        y: 1.2
+        theta: 0.0
+      kr: 0.15
+      kl: 0.15
+
+  puzzlebot_controller:
+    ros__parameters:
+      controller_update_rate: 50.0
+      distance_tolerance: 0.01
+      angular_tolerance: 0.017
+      angular_adjustment: 0.1745
+      following_walls_distance: 0.3
+      front_stop_distance: 0.3
+      lookahead_distance: 0.35
+      p2p_v_Kp: 0.8
+      p2p_w_Kp: 1.5
+      fw_w_Kp: 2.0
+      fw_e_Kp: 8.5
+      fw_linear_speed: 0.4
+      fw_outer_corner_angular_speed: 1.9
+      v_max: 0.4
+      w_max: 3.14
+      side_open_angle: 0.5236
+      front_open_angle: 0.3
